new file:   cooper/__pycache__/apps.cpython-36.pyc 	new file:   cooper/__pycache__/forms.cpython-36.pyc 	new file:   cooper/__pycache__/models.cpython-36.pyc 	modified:   cooper/__pycache__/settings.cpython-36.pyc 	modified:   cooper/__pycache__/urls.cpython-36.pyc 	modified:   cooper/__pycache__/views.cpython-36.pyc 	new file:   cooper/apps.py 	new file:   cooper/forms.py 	new file:   cooper/migrations/0001_initial.py 	new file:   cooper/migrations/__init__.py 	new file:   cooper/migrations/__pycache__/0001_initial.cpython-36.pyc 	new file:   cooper/migrations/__pycache__/0002_alter_associado_cpf.cpython-36.pyc 	new file:   cooper/migrations/__pycache__/0002_cidade.cpython-36.pyc 	new file:   cooper/migrations/__pycache__/0003_auto_20220915_1900.cpython-36.pyc 	new file:   cooper/migrations/__pycache__/__init__.cpython-36.pyc 	new file:   cooper/models.py 	modified:   cooper/settings.py 	modified:   cooper/urls.py 	modified:   cooper/views.py 	new file:   databaseCoopergaedicke.sqbpro 	renamed:    db.sqlite3 -> databaseCoopergaedicke.sqlite3 	modified:   templates/accounts/principalpage.html 	modified:   templates/registration/login.html 	renamed:    templates/registration/login2.html -> templates/registration/login22.html

--- a/templates/accounts/principalpage.html
+++ b/templates/accounts/principalpage.html
@@ -8,7 +8,7 @@
     <br>
     <div class="centeritems">
         <div class="buttons">
-            <a href="{% url 'cadsatrar' %}"><button type="button" class="changepagebuttons">Cadastrar Associados</button></a>
+            <a href="{% url 'cadastrar' %}"><button type="button" class="changepagebuttons">Cadastrar Associados</button></a>
             <p></p>
             <a href="{% url 'gerenciar' %}"><button type="button" class="changepagebuttons">Gerenciar Associados</button></a>
         </div>
