--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,25 +3,45 @@
 
 
 {% block content %}
-    {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
-    {% if next %}
-        {% if user.is_authenticated %}
-            <p>Your account doesn't have access to this page. To proceed,
-        please login with an account that has access.</p>
-        {% else %}
-            <p>Please login to see this page.</p>
-        {% endif %}
-    {% endif %}
-    <form method="post" action="{% url 'principal' %}">
-    {% csrf_token %}
+   
+    <!--<form method="post" action="{% url 'principal' %}">-->
     <div class="logo">
         <img src="{% static "images/cooper.png" %}" alt="coopergaedicke logo" class="cooperLogo">
     </div>
     <br><br>
     <div class="centeritems" >
-        <div class="loginbox">
+    {% if form.errors %}
+      <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
+  
+    {% if next %}
+      {% if user.is_authenticated %}
+        <p>Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</p>
+      {% else %}
+        <p>Please login to see this page.</p>
+      {% endif %}
+    {% endif %}
+  
+    <form method="post" action="{% url 'login' %}">
+      {% csrf_token %}
+      <table>
+        <tr>
+          <td>{{ form.username.label_tag }}</td>
+          <td>{{ form.username }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.password.label_tag }}</td>
+          <td>{{ form.password }}</td>
+        </tr>
+      </table>
+      <input type="text" name="{{ form.field.html_name }}" placeholder="foo" value="{{ form.field.value }}" />
+      <input type="submit" value="login" />
+      <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+  
+    <p><a href="{% url 'teste' %}">Lost password?</a></p>
+        <!--<div class="loginbox">
             <p></p>
             Usuário
             <input type="text" name="user" placeholder="Usuário" class="userbox">
@@ -29,12 +49,13 @@
             Senha
             <input type="password" name="password" placeholder="Senha" class="passwordbox">
             <p></p>
-        </div>
-        <div>
+        </div>-->
+        <!--<div>
             <p></p>
             <a href="{% url 'principal' %}"><button type="submit" class="checkbutton">Entrar</button></a>
-        </div>
+        </div> -->
     </div>
     <p class="bluetext">Desenvolvido por:</p>
     <img src="{% static "images/CETEC-Logo-Horizontal.png" %}" alt="logo cetec" class="ceteclogo">
+    
 {% endblock content %}
