modified:   cooper/__pycache__/models.cpython-36.pyc 	modified:   cooper/__pycache__/urls.cpython-36.pyc 	modified:   cooper/__pycache__/views.cpython-36.pyc 	modified:   cooper/models.py 	modified:   cooper/urls.py 	modified:   cooper/views.py 	modified:   templates/registration/login.html

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -23,16 +23,16 @@
       {% endif %}
     {% endif %}
   
-    <form method="post" action="{% url 'login' %}">
+    <form method="post" action="{% url 'teste' %}">
       {% csrf_token %}
       <table>
         <tr>
           <td>{{ form.username.label_tag }}</td>
-          <td>{{ form.username }}</td>
+          <td><input type="text" name="usuario" placeholder="Usuário"/></td>
         </tr>
         <tr>
           <td>{{ form.password.label_tag }}</td>
-          <td>{{ form.password }}</td>
+          <td><input type="text" name="senha" placeholder="Senha"/></td>
         </tr>
       </table>
       <input type="text" name="{{ form.field.html_name }}" placeholder="foo" value="{{ form.field.value }}" />
