new file:   backup.txt 	modified:   cooper/__pycache__/models.cpython-36.pyc 	modified:   cooper/__pycache__/settings.cpython-36.pyc 	modified:   cooper/__pycache__/urls.cpython-36.pyc 	modified:   cooper/__pycache__/views.cpython-36.pyc 	new file:   cooper/migrations/0002_auto_20220928_2042.py 	new file:   cooper/migrations/__pycache__/0002_auto_20220928_2042.cpython-36.pyc 	modified:   cooper/models.py 	modified:   cooper/settings.py 	modified:   cooper/urls.py 	modified:   cooper/views.py 	new file:   cooperviews/__init__.py 	new file:   cooperviews/__pycache__/__init__.cpython-36.pyc 	new file:   cooperviews/__pycache__/admin.cpython-36.pyc 	new file:   cooperviews/__pycache__/apps.cpython-36.pyc 	new file:   cooperviews/__pycache__/models.cpython-36.pyc 	new file:   cooperviews/__pycache__/views.cpython-36.pyc 	new file:   cooperviews/admin.py 	new file:   cooperviews/apps.py 	new file:   cooperviews/migrations/0001_initial.py 	new file:   cooperviews/migrations/__init__.py 	new file:   cooperviews/migrations/__pycache__/0001_initial.cpython-36.pyc 	new file:   cooperviews/migrations/__pycache__/__init__.cpython-36.pyc 	new file:   cooperviews/models.py 	new file:   cooperviews/tests.py 	new file:   cooperviews/views.py 	deleted:    databaseCoopergaedicke.sqbpro 	renamed:    databaseCoopergaedicke.sqlite3 -> db_coopergaedicke.sqlite 	modified:   templates/accounts/cadastrarpage.html 	modified:   templates/registration/login.html 	modified:   templates/static/css/cadastrar_page_style.css 	modified:   templates/static/css/login_page_style.css

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,7 +6,7 @@
    
     <!--<form method="post" action="{% url 'principal' %}">-->
     <div class="logo">
-        <img src="{% static "images/cooper.png" %}" alt="coopergaedicke logo" class="cooperLogo">
+        <img src="{% static 'images/cooper.png' %}" alt="coopergaedicke logo" class="cooperLogo">
     </div>
     <br><br>
     <div class="centeritems" >
@@ -23,31 +23,30 @@
       {% endif %}
     {% endif %}
   
-    <form method="post" action="{% url 'teste' %}">
-      {% csrf_token %}
-      <table>
-        <tr>
-          <td>{{ form.username.label_tag }}</td>
-          <td><input type="text" name="usuario" placeholder="Usuário"/></td>
-        </tr>
-        <tr>
-          <td>{{ form.password.label_tag }}</td>
-          <td><input type="text" name="senha" placeholder="Senha"/></td>
-        </tr>
-      </table>
-      <input type="text" name="{{ form.field.html_name }}" placeholder="foo" value="{{ form.field.value }}" />
-      <input type="submit" value="login" />
-      <input type="hidden" name="next" value="{{ next }}" />
-    </form>
-  
-    <p><a href="{% url 'teste' %}">Lost password?</a></p>
-        <!--<div class="loginbox">
+    <div class="loginbox">
+      <form method="post" action="{% url 'teste' %}">
+        {% csrf_token %}
+        <table>
+          <tr>
+            <td>{{ form.username.label_tag }}</td>
+            <td><input type="text" name="usuario" placeholder="Usuário" class="userbox"/></td>
+          </tr>
+          <tr>
+            <td>{{ form.password.label_tag }}</td>
+            <td><input type="text" name="senha" placeholder="Senha" class="passwordbox"/></td>
+          </tr>
+        </table>
+        <input type="submit" value="login" />
+        <input type="hidden" name="next" value="{{ next }}" />
+      </form>
+    </div>
+    <!--<p><a href="{% url 'login' %}">Lost password?</a></p>
             <p></p>
             Usuário
-            <input type="text" name="user" placeholder="Usuário" class="userbox">
+            <input type="text" name="user" placeholder="Usuário" >
             <br><br>
             Senha
-            <input type="password" name="password" placeholder="Senha" class="passwordbox">
+            <input type="password" name="password" placeholder="Senha" >
             <p></p>
         </div>-->
         <!--<div>
@@ -56,6 +55,6 @@
         </div> -->
     </div>
     <p class="bluetext">Desenvolvido por:</p>
-    <img src="{% static "images/CETEC-Logo-Horizontal.png" %}" alt="logo cetec" class="ceteclogo">
+    <img src="{% static 'images/CETEC-Logo-Horizontal.png' %}" alt="logo cetec" class="ceteclogo">
     
 {% endblock content %}
