modified:   cooper/__pycache__/settings.cpython-36.pyc 	modified:   templates/accounts/notloggedwarning.html

--- a/templates/accounts/notloggedwarning.html
+++ b/templates/accounts/notloggedwarning.html
@@ -24,7 +24,7 @@
     </div>
     <br><br>
     <div class="centeritems">
-        <h1>Você não esta conectado! </h1>
+        <h1>Você não está conectado! </h1>
         <a href ="{% url 'login' %}" ><button class="changepagebuttons">Clique aqui para entrar.</button></a>
     </div>
 {% endblock %}
