modified:   cooper/__pycache__/settings.cpython-36.pyc 	modified:   cooper/__pycache__/urls.cpython-36.pyc 	deleted:    cooper/migrations/__pycache__/0001_initial.cpython-36.pyc 	deleted:    cooper/migrations/__pycache__/0002_alter_associado_cpf.cpython-36.pyc 	deleted:    cooper/migrations/__pycache__/0002_auto_20220928_2042.cpython-36.pyc 	deleted:    cooper/migrations/__pycache__/0002_cidade.cpython-36.pyc 	deleted:    cooper/migrations/__pycache__/0003_auto_20220915_1900.cpython-36.pyc 	modified:   cooper/settings.py 	modified:   cooper/urls.py 	modified:   cooperviews/__pycache__/forms.cpython-36.pyc 	modified:   cooperviews/__pycache__/models.cpython-36.pyc 	modified:   cooperviews/__pycache__/tables.cpython-36.pyc 	modified:   cooperviews/__pycache__/views.cpython-36.pyc 	modified:   cooperviews/forms.py 	modified:   cooperviews/migrations/0001_initial.py 	modified:   cooperviews/migrations/__pycache__/0001_initial.cpython-36.pyc 	deleted:    cooperviews/migrations/__pycache__/0002_alter_associados_rg.cpython-36.pyc 	modified:   cooperviews/models.py 	modified:   cooperviews/tables.py 	modified:   cooperviews/views.py 	new file:   templates/accounts/criarprojetospage.html 	modified:   templates/accounts/principalpage.html 	new file:   templates/accounts/successpageproj.html 	new file:   templates/accounts/verProjetosPage.html 	modified:   templates/accounts/ver_associados_page.html 	modified:   templates/static/css/ver_associados_page_style.css

--- a/templates/accounts/principalpage.html
+++ b/templates/accounts/principalpage.html
@@ -18,9 +18,14 @@
         <div class="buttons">
             <a href="{% url 'cadastrar' %}"><button type="button" class="changepagebuttons">Cadastrar Associados</button></a>
             <p></p>
+            <a href="{% url 'cadastrarproj' %}"><button type="button" class="changepagebuttons">Criar Projeto</button></a>
+            <p></p>
             <a href="{% url 'verassociados' %}"><button type="button" class="changepagebuttons">Ver Associados</button></a>
             <p></p>
+            <a href="{% url 'logout' %}"><button type="button" class="changepagebuttons">Ver Projetos</button></a>
+            <p></p>
             <a href="{% url 'logout' %}"><button type="button" class="changepagebuttons">Sair</button></a>
+
         </div>
     </div>
 {% endblock content %}
