--- a/templates/accounts/verProjetosPage.html
+++ b/templates/accounts/verProjetosPage.html
@@ -30,22 +30,11 @@
     <br>
    <table class="associados">
         <tr>
-            <th>Nome</th>
-            <th>Quotas</th>
-            <th>Nome Responsáveis</th>
-            <th>Data de Nascimento</th>
-            <th>Cidade Natal</th>
-            <th>Estado Natal</th>
-            <th>Telefone</th>
-            <th>Email</th>
-            <th>Rg</th>
-            <th class="primarykey">Cpf</th>
-            <th>Está Associado</th>
-            <th>Cargo</th>
-            <th>Rua</th>
-            <th>Bairro</th>
-            <th>Cidade Atual</th>
-            <th>Cep</th>
+            <th>Nome do Projeto</th>
+            <th class="primarykey">Código do projeto</th>
+            <th>Concluído</th>
+            <th>Data de Criação</th>
+            
         </tr>
         {% for item in objs %}
         <tr>
