modified:   cooper/__pycache__/urls.cpython-36.pyc 	modified:   cooper/urls.py 	modified:   templates/accounts/principalpage.html 	modified:   templates/accounts/verProjetosPage.html 	modified:   templates/static/css/ver_associados_page_style.css

--- a/templates/accounts/principalpage.html
+++ b/templates/accounts/principalpage.html
@@ -22,7 +22,7 @@
             <p></p>
             <a href="{% url 'verassociados' %}"><button type="button" class="changepagebuttons">Ver Associados</button></a>
             <p></p>
-            <a href="{% url 'logout' %}"><button type="button" class="changepagebuttons">Ver Projetos</button></a>
+            <a href="{% url 'verprojetos' %}"><button type="button" class="changepagebuttons">Ver Projetos</button></a>
             <p></p>
             <a href="{% url 'logout' %}"><button type="button" class="changepagebuttons">Sair</button></a>
 
