modified:   cooper/__pycache__/urls.cpython-36.pyc 	modified:   cooper/urls.py 	modified:   cooperviews/__pycache__/forms.cpython-36.pyc 	modified:   cooperviews/__pycache__/models.cpython-36.pyc 	modified:   cooperviews/__pycache__/views.cpython-36.pyc 	modified:   cooperviews/forms.py 	modified:   cooperviews/models.py 	modified:   cooperviews/views.py 	modified:   myvenv.zip 	new file:   templates/accounts/checarProjetosPage.html 	modified:   templates/accounts/criarprojetospage.html 	new file:   templates/accounts/gerenciarProjetosPage.html 	modified:   templates/accounts/gerenciarassociados_page.html 	modified:   templates/accounts/verProjetosPage.html 	modified:   templates/accounts/ver_associados_page.html 	modified:   templates/static/css/cadastrar_page_style.css 	modified:   templates/static/css/login_page_style.css 	modified:   templates/static/css/principal_page_style.css 	modified:   templates/static/css/ver_associados_page_style.css 	modified:   templates/static/images/CETEC-Logo-Horizontal.png

--- a/templates/accounts/criarprojetospage.html
+++ b/templates/accounts/criarprojetospage.html
@@ -27,7 +27,23 @@
       <div class="formulario">
           <form  method="post" action="{% url 'criarproj' %}">
             {% csrf_token %}
-            {{ form }}
+            <br>
+            <div class="inputBox">
+              <label for="nome" class="labelinput">Nome do Projeto:</label>
+              <div>{{ form.nomeProjeto|add_class:"inputBool" }}</div>
+            </div><!--nome-->
+            <br><br>
+            <div class="inputBox">
+              <label for="nome" class="labelinput">Descrição do Projeto:</label>
+              <div>{{ form.descricaoProjeto|add_class:"inputBool" }}</div>
+            </div><!--nome-->
+            <br><br>
+            <br>
+            <div class="inputBox">
+              <label for="associado" class="labelinput">Está Concluido:</label>
+              <div class="inputUserBool">{{ form.isConcluido|add_class:"inputAssociado" }}</div>
+            </div><!--associado-->
+            <br>
             <div class="downcenter">    
               <div class="buttons">
                 <input type="submit" value="Salvar" class="changepagebuttons"/>
