--- a/templates/accounts/gerenciarassociados_page.html
+++ b/templates/accounts/gerenciarassociados_page.html
@@ -24,13 +24,11 @@
     <div class="centeritems">
     <div class="loginbox">
         <strong>Digite o cpf do associado:</strong>
+        <br><br>
         <form method="post" action="{% url 'checkcpf' %}">
             {% csrf_token %}
-            <table>
-            <tr>
-                <td>{{ form.cpf }}</td>
-            </tr>
-            </table>
+            {{ form.cpf }}
+            <br><br>
             <input type="submit" value="Prosseguir" class="loginboxbutton"/>
             <a href="{% url 'verassociados' %}"><button type="button" class="loginboxbutton">Voltar</button></a>
             <input type="hidden" name="next" value="{{ next }}" />
