--- a/templates/accounts/verProjetosPage.html
+++ b/templates/accounts/verProjetosPage.html
@@ -23,11 +23,11 @@
     <div class="downcenter">    
         <div class="buttons">
             <a href="{% url 'principal' %}"><button type="button" class="changepagebuttons">Voltar</button></a>
-            <a href="{% url 'principal' %}"><button type="submit" class="changepagebuttons">Gerenciar</button></a>
+            <a href="{% url 'gerenciarproj' %}"><button type="submit" class="changepagebuttons">Gerenciar</button></a>
         </div>
         <nobr><strong>Projetos</strong></nobr>
     </div>
-    <br>
+    <br><br><br>
    <table class="associados">
         <tr>
             <th>Nome do Projeto</th>
