--- a/templates/static/css/ver_associados_page_style.css
+++ b/templates/static/css/ver_associados_page_style.css
@@ -21,25 +21,22 @@ h3{
     background-color: transparent;
 }
 .associados{
-    color: black;
-    border: 3px solid black;
-    border-radius: 10px;
+    border-style: none;
+    background-color: white;
 }
 td{
-    border: 3px solid black;
-    border-radius: 10px;
+    border-style: none;
     background-color: forestgreen;
     padding:5px;
 }
 th{
-    border: 3px solid black;
-    border-radius: 10px;
+    border-style: none;
     background-color: forestgreen;
     padding:5px;
 }
 .primarykey{
-    border: 3px solid black;
-    border-radius: 10px;
+    border-style: none;
+    padding:5px;
     background-color: darkolivegreen;
 }
 a:link{
@@ -84,9 +81,9 @@ a{
     border: 2px solid black;
 }
 .changepagebuttons{
-    border-radius:5px;
-    border: 3px solid black;
-    box-shadow: 0px 8px 5px 2px rgb(0, 130, 0);
+    background-color: white;
+    border-style: none;
+    border-radius:3px;
 }
 .labelinput{
     color: black;
