Mudanças a serem submetidas: 	modified:   cooper/__pycache__/urls.cpython-36.pyc 	modified:   cooper/urls.py 	modified:   cooperviews/__pycache__/views.cpython-36.pyc 	modified:   cooperviews/views.py 	modified:   templates/accounts/criarprojetospage.html 	modified:   templates/accounts/gerenciarProjetosPage.html 	modified:   templates/accounts/verProjetosPage.html 	modified:   templates/accounts/ver_associados_page.html 	modified:   templates/registration/login.html 	modified:   templates/static/css/cadastrar_page_style.css 	modified:   templates/static/css/login_page_style.css 	new file:   templates/static/images/abaixo.png 	new file:   templates/static/images/pra-cima.png

--- a/templates/accounts/gerenciarProjetosPage.html
+++ b/templates/accounts/gerenciarProjetosPage.html
@@ -81,10 +81,10 @@
           </div>
           <script>
           function confirmDelete(){
-            document.getElementById("confirmationalert").style.width="100%";
+            document.getElementById("confirmationalert").style.height="100%";
           }
           function notDeleted(){
-            document.getElementById("confirmationalert").style.width="0px";
+            document.getElementById("confirmationalert").style.height="0px";
           }
         </script>
         </div>
