--- a/templates/accounts/criarprojetospage.html
+++ b/templates/accounts/criarprojetospage.html
@@ -27,15 +27,19 @@
       <div class="formulario">
           <form  method="post" action="{% url 'criarproj' %}">
             {% csrf_token %}
+            <h2><strong>Cadastro de Projeto</strong></h2>
+            <hr>
             <br>
             <div class="inputBox">
               <label for="nome" class="labelinput">Nome do Projeto:</label>
+              <br>
               <div>{{ form.nomeProjeto|add_class:"inputBool" }}</div>
             </div><!--nome-->
             <br><br>
             <div class="inputBox">
               <label for="nome" class="labelinput">Descrição do Projeto:</label>
-              <div>{{ form.descricaoProjeto|add_class:"inputBool" }}</div>
+              <br><br>
+              <div>{{ form.descricaoProjeto|add_class:"inputText" }}</div>
             </div><!--nome-->
             <br><br>
             <br>
@@ -44,6 +48,7 @@
               <div class="inputUserBool">{{ form.isConcluido|add_class:"inputAssociado" }}</div>
             </div><!--associado-->
             <br>
+            <hr>
             <div class="downcenter">    
               <div class="buttons">
                 <input type="submit" value="Salvar" class="changepagebuttons"/>
