--- a/templates/static/css/cadastrar_page_style.css
+++ b/templates/static/css/cadastrar_page_style.css
@@ -62,6 +62,12 @@ h3{
     border-style: none;
     border-radius:5px;
 }
+.inputText{
+    background-color: white;
+    border-style: none;
+    border-radius:5px;
+    resize: none;
+}
 .inputAssociado{
     margin: 0px 0px 0px 0px;
 }
@@ -102,14 +108,15 @@ h3{
     right:0%;
 }
 .confirmationalert{
-    width: 0;
+    width: 100%;
     z-index: 1;
     position:absolute;
-    height:100%;
+    height:0;
     top:0%;
     text-align:center;
     background-color: rgb(0, 87, 0);
     overflow-x: hidden;
     padding:0px;
     border-radius: 10px;
+    transition: 0.2s;
 }
