--- a/templates/static/css/login_page_style.css
+++ b/templates/static/css/login_page_style.css
@@ -35,8 +35,8 @@ input{
     border-radius:3px;
 }
 .loginboxbutton{
-    background-color:rgb(0, 177, 0);
-    border-style: none;
+    background-color:white;
+    border:1px solid gray;
     border-radius:3px;
 }
 .checkbutton{
